Resume wording and layout fixes Resume header no longer has "Cell" next to phone number. Mobile layout places bullets between text. Fix padding in middle of email address when JavaScript is disabled. Fix stray bullet after NYU entry in Education section that was subtly overlapping the text "NYU Shanghai". Align date and location text to right edge of page in mobile layout. Update the header text for entryless sections. Headers for sections are bolded in mobile layout rather than small-caps to match formatting of other 11pt text. Remove Relevant Coursework bullet in NYU entry of Education section. Elaborate on Zais Group and Bad Rabbit version control tool work. Compress some bullets to fit on fewer lines. More proper grammar. No sentences/periods in bullets. Fix some verb tenses.

--- a/resume.css
+++ b/resume.css
@@ -259,7 +259,7 @@ li.leftalign2col {
 	text-align: left;
 }
 
-.heading p span {
+.heading p > span {
 	display: block;
 }
 
@@ -291,9 +291,13 @@ li.leftalign2col {
 	line-height: 11.5pt;
 }
 
-.section .entry ul, .small, .heading p {
+.section .entry ul, .small, .heading p > span {
 	font-size: 10pt;
 	line-height: 12pt;
+}
+
+li.endline:before {
+	display: none;
 }
 
 .endline:after {
